# insurance_agency

./: .dockerignore  .gitignore  docker-compose.yml  entrypoint.sh  readme.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  readme.md  requirements.txt
backend/core/: models.py  redis_client.py  service.py  signals.py  urls.py
backend/core/templates/: login.html  product_form.html  product_list.html
backend/fixture/: test_case.json
backend/front/: serializers.py  urls.py  views.py
backend/front/templates/: home.html  product.html
backend/insurance_agency/: settings.py  urls.py
backend/tests/: test_redis_client.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
consumer/: Dockerfile  entrypoint.sh  pyproject.toml
consumer/consumer/: main.py
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/: base.html  customer_list.html  product_list.html  register.html  seller_detail.html
front/: README.md  nginx.conf  package-lock.json  package.json  urls.py  views.py
front/public/: index.html
front/public/css/: main.css
front/src/: App.vue  main.js
front/src/components/: Footer.vue  ProductBuy.vue  ProductItem.vue
front/src/router/: index.js
front/src/views/: Products.vue
front/static/js/: plugins.js
front/templates/: base_front.html  buy_succes.html  home.html
insurance_agency/: asgi.py  urls.py  wsgi.py
